fixed underlines and corrected container with on tablet

--- a/src/modules/reports/components/ReportsItem/ReportsItem.module.css
+++ b/src/modules/reports/components/ReportsItem/ReportsItem.module.css
@@ -22,3 +22,9 @@
 .category {
   letter-spacing: 0.02em;
 }
+
+@media screen and (min-width: 768px) {
+  .link {
+    width: 104px;
+  }
+}
